# Cow3D

./: CMakeLists.txt  readme.md
Cow3D/: ResManager.cpp  ResManager.h  Window.cpp  Window.h
Cow3D/audio/: Sound.cpp  Sound.h
Cow3D/instance/: Instance.h
Cow3D/instance/2d/: Instance2D.h  Sprite.h  Text.cpp  Text.h
Cow3D/instance/3d/: AnimationInstance.h  Geometry.h  Instance3D.h  ModelInstance.h
Cow3D/math/: Box.h  Camera.cpp  Camera.h  Mat4.h  Quat.h  Rect.h  Vec2.h  Vec3.h  Vec4.h
Cow3D/misc/data/: ByteReader.h  ByteWriter.h
Cow3D/other/: TimeUtil.h
Cow3D/render/: AnimatedModel.cpp  AnimatedModel.h  Color.h  Font.cpp  Font.h  GlLoader.cpp  MeshBuilder.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Cow3D/render/ext/: Arial.h
Cow3D/render/model/: Frame.h  Mesh.h  Model.cpp  Model.h  Node.h  TransformTrack.h
Cow3D/render/shader/: DefaultShader.h  Shader.cpp  Shader.h
Cow3D/scene/: Scene.h  Scene2D.cpp  Scene2D.h  Scene3D.cpp  Scene3D.h
example/: example_general.cpp
res/model/: arthur.glb  meuh.glb
src/: Cow3D.cpp  Cow3D.h  ResManager.h  Window.cpp  main.cpp
src/audio/: Audio.cpp  Audio.h  Sound.cpp
src/instance/2d/: Text.h
src/instance/3d/: ModelInstance.h
src/math/: Angle.h  Box.h  Camera.h  Quat.h  Rect.h  Transform.h  Triangle.h  Vec2.h  Vec3.h  Vec4.h
src/misc/data/: ByteReader.h  ByteWriter.h
src/other/: File.h  Logger.h
src/render/: AnimatedModel.h  Color.h  Font.h  GlLoader.h  MeshBuilder.cpp  Texture.cpp  Texture.h  VertexArray.h
src/render/model/: Animation.h  Frame.h  Mesh.h  Model.h  Node.h  Track.h  TransformTrack.h
src/render/shader/: DefaultShader.h  Shader.h
src/scene/: Scene3D.h
